maybe fixed keyboard not appearing on mobile?

--- a/css/password.css
+++ b/css/password.css
@@ -15,7 +15,7 @@
 }
 
 #password:focus {
-  border: 2px solid black;
+  border: 2px solid black !important;
   border-radius: 4px;
 }
 #password:hover {
